Admin Dashboard Card and Button linkup

--- a/Areas/User/Views/Deshboard/MyDashboard.cshtml
+++ b/Areas/User/Views/Deshboard/MyDashboard.cshtml
@@ -214,9 +214,6 @@
             }
 
 
-
-
-
             @if (User.IsInRole("Farmer"))
             {
 
@@ -239,8 +236,6 @@
                         </div>
                     </a>
                 </div>
-
-
 
                 <div class="col-xl-3 col-md-6 mb-4">
                     <a asp-action="Wallet" asp-controller="Inventory"  asp-area="Farmer" class="card-link">
@@ -313,6 +308,105 @@
                 </div>
 
             }
+
+
+            @if (User.IsInRole("Admin"))
+            {
+
+                <div class="col-xl-3 col-md-6 mb-4">
+                    <a asp-area="Farmer" asp-controller="Inventory" asp-action="AllOrdersGroupedByDate" class="card-link">
+                        <div class="card border-left-primary shadow h-100 py-2 ">
+                            <div class="card-body">
+                                <div class="row no-gutters align-items-center">
+                                    <div class="col mr-2">
+                                        <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                                            This Month
+                                        </div>
+                                        <div class="h5 mb-0 font-weight-bold text-gray-800">৳ @* @ViewBag.CurrentMonthRevenue *@</div>
+                                    </div>
+                                    <div class="col-auto">
+                                        <i class="fas fa-calendar fa-2x text-gray-300"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="col-xl-3 col-md-6 mb-4">
+                    <a asp-action="Wallet" asp-controller="Inventory" asp-area="Farmer" class="card-link">
+                        <div class="card border-left-success shadow h-100 py-2 ">
+                            <div class="card-body">
+                                <div class="row no-gutters align-items-center">
+                                    <div class="col mr-2">
+                                        <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+                                           Total Revenue
+                                        </div>
+                                        <div class="h5 mb-0 font-weight-bold text-gray-800">৳  @* @ViewBag.TotalRevenue *@ </div>
+                                    </div>
+                                    <div class="col-auto">
+                                        <i class="fa-solid fa-bangladeshi-taka-sign fa-2x text-gray-300"></i>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="col-xl-3 col-md-6 mb-4">
+                    <a asp-area="Farmer" asp-controller="Inventory" asp-action="Index" class="card-link">
+                        <div class="card border-left-info shadow h-100 py-2">
+                            <div class="card-body">
+                                <div class="row no-gutters align-items-center">
+                                    <div class="col mr-2">
+                                        <div class="text-xs font-weight-bold text-info text-uppercase mb-1">
+                                            Withdraw Manage
+                                        </div>
+                                        <div class="row no-gutters align-items-center">
+                                            <div class="col-auto">
+                                                <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800"></div>
+                                            </div>
+                                            <div class="h5 mb-0 font-weight-bold " style="color: #20c997;"> Accounts </div>
+                                          
+                                        </div>
+                                    </div>
+                                    <div class="col-auto">
+                                        <i class="fa-solid fa-file-invoice fa-2x " style="color: #20c997;"></i>
+                                        
+                                    </div>
+                                </div>
+                            </div>
+                        </div>o 
+                    </a>
+                </div>
+
+
+                <div class="col-xl-3 col-md-6 mb-4">
+                    <a asp-area="Farmer" asp-controller="FarmerShop" asp-action="Index" class="card-link">
+                        <div class="card border-left-warning shadow h-100 py-2">
+                            <div class="card-body">
+                                <div class="row no-gutters align-items-center">
+                                    <div class="col mr-2">
+                                        <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
+                                            User Role
+                                        </div>
+                                        <div class="h5 mb-0 font-weight-bold text-gray-800">Manage User</div>
+                                    </div>
+                                    <div class="col-auto">
+                                        <i class="fa-regular fa-user fa-2x text-primary-300"></i>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+            }
+
+
+
         </div>
         @if (User.IsInRole("Farmer"))
         {
@@ -399,6 +493,79 @@
 
         }
 
+        @if (User.IsInRole("Admin"))
+        {
+            <div class="row mb-2 text-right justify-content-end"  style="gap: 10px; margin-right:10px" >
+
+                <a asp-area="Admin" asp-controller="Products" asp-action="Index" class="btn custom-btn btn-success">
+                    <i class="fas fa-boxes"></i>  Products
+                </a>
+
+                <a asp-area="Admin" asp-controller="ProductTypes" asp-action="Index" class="btn custom-btn btn-danger">
+                    <i class="fas fa-list"></i>  Category
+                </a>
+
+                <a asp-area="Admin" asp-controller="SpecialTag" asp-action="Index" class="btn custom-btn btn-warning">
+                    <i class="fas fa-tags"></i> Sub Category
+                </a>
+
+                <a asp-area="Customer" asp-controller="Order" asp-action="AllOrders" class="btn custom-btn btn-primary">
+                    <i class="fa-solid fa-bag-shopping"></i>All  Orders
+                </a>
+
+                <a asp-area="Customer" asp-controller="User" asp-action="Index" class="btn custom-btn btn-info">
+                    <i class="fas fa-users"></i> All User
+                </a>
+
+               
+@* 
+                <a asp-area="Admin" asp-controller="Wallet" asp-action="AllWithdrawals" class="btn custom-btn btn-light">
+                    <i class="fas fa-wallet"></i> Wallet
+                </a> *@
+
+                <a asp-area="Customer" asp-controller="Blog" asp-action="BlogManager" class="btn custom-btn btn-dark">
+                    <i class="fas fa-blog"></i> Blog Manage
+                </a>
+
+                <a asp-area="Admin" asp-controller="ProductPrice" asp-action="Index" class="btn custom-btn btn-success" style="background:#d54b81">
+                    <i class="fas fa-dollar-sign"></i> Product Price
+                </a>
+
+                <a asp-action="Index" asp-area="Customer" asp-controller="Feedback" class="btn custom-btn btn-info" style="background:#4bd5c2">
+                    <i class="fas fa-comments"></i> Feedback  
+                </a>
+
+                <a asp-action="SetDiscount" asp-area="Admin" asp-controller="Products" class="btn custom-btn btn-danger" style="background:#936435">
+                    <i class="fas fa-percentage"></i> Set Discount
+                </a>
+            </div>
+
+
+
+            <div class="col-xl-12 col-lg-12">
+                <div class="card shadow mb-4">
+                    <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                        <h6 class="m-0 font-weight-bold text-primary">Admin Revenue</h6>
+                    </div>
+                    <div class="card-body">
+                        <h5>Total Revenue: @* @ViewBag.TotalRevenue *@</h5>
+
+                        <h6>Monthly </h6>
+                        <div class="chart-area">
+                            <canvas id="riderDeliveriesChart"></canvas>
+                        </div>
+
+                        <h6>Total</h6>
+                        <div class="chart-area">
+                            <canvas id="riderRevenueChart"></canvas>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        }
+
+
 
 
     </div>
@@ -415,6 +582,19 @@
             transition: transform 0.3s ease-in-out;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
+.custom-btn {
+    font-size: 1.0em; 
+    padding: 10px 20px; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 100px; 
+}
+
+.custom-btn i {
+    margin-right: 8px; 
+    font-size: 1.4em; 
+}
 </style>
 
 @if (User.IsInRole("Rider"))
