--- a/Areas/Customer/Views/_ViewImports.cshtml
+++ b/Areas/Customer/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using OnlineShop
 @using OnlineShop.Models
+@using OrganicOption.Models
+@using OrganicOption.Models.View_Model
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
