--- a/Areas/User/Views/Deshboard/MyDashboard.cshtml
+++ b/Areas/User/Views/Deshboard/MyDashboard.cshtml
@@ -377,7 +377,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>o 
+                        </div>
                     </a>
                 </div>
 
