--- a/Areas/Customer/Views/User/Details.cshtml
+++ b/Areas/Customer/Views/User/Details.cshtml
@@ -2,7 +2,12 @@
 @{
     ViewData["Title"] = "Details";
 }
+<div class="container mt-2">
+    <a href="javascript:history.back()" class="btn btn-secondary mb-2">
+        <i class="fa fa-arrow-left"></i> Back
+    </a>
 
+</div>
 <div class="container mt-7" style="margin-top:18px">
 <div class="d-flex justify-content-center mt-7">
     <div class="card  text-center justify-content-center" style="width:700px;">
