--- a/Areas/Customer/Views/Home/Index.cshtml
+++ b/Areas/Customer/Views/Home/Index.cshtml
@@ -121,7 +121,7 @@
             </div>
         </div>
 
-        <div class="col-md-3 col-lg-3 mt-2" style="background-color: #fafafa; border-radius: 10px; box-shadow: 0px 4px 8px rgba(134, 133, 133, 0.1); padding: 20px;">
+     @*    <div class="col-md-3 col-lg-3 mt-2" style="background-color: #fafafa; border-radius: 10px; box-shadow: 0px 4px 8px rgba(134, 133, 133, 0.1); padding: 20px;">
             <div class="text-center">
                 <h5 style="font-weight: bold; margin-bottom: 20px;">Find Local Farmers</h5>
             </div>
@@ -144,7 +144,140 @@
                 <a href="something" class="btn btn-success">Product Price</a>
                 <a href="something" class="btn btn-success">Delivery Price</a>
             </div>
+        </div> *@
+    @*     <div class="col-md-3 col-lg-3 mt-2 p-3" style="background-color: #fafafa; border-radius: 10px; box-shadow: 0px 4px 8px rgba(134, 133, 133, 0.1);">
+            <div class=" card-title shdow text-center">
+                <h5 style="font-weight: bold; margin-bottom: 27px;">Find Local Farmers</h5>
+            </div>
+
+            <!-- First row with two cards (Location Icon + Buttons) -->
+            <div class=" row mb-3">
+                <!-- Left card with location icon -->
+                <div class="col-6 d-flex justify-content-center align-items-center">
+                    <img src="/assets/img/product/location.png" style="width:100px; height:100px;" alt="Location Icon">
+                </div>
+
+                <!-- Right card with buttons -->
+                <div class="col-6 d-flex flex-column align-items-center">
+                    <a asp-action="AllShop" asp-controller="Farmershop" asp-area="Farmer" class="btn btn-success mb-2" style="width: 100%;">Nearby Shop</a>
+                    <button type="button" class="btn btn-success" onclick="updateLocation()">Update Location</button>
+                </div>
+            </div>
+
+            <!-- Second row with two clickable images -->
+            <div class="row">
+                <!-- Left clickable image -->
+                <div class="col-6">
+                    <a href="something">
+                        <img src="/assets/img/product/Price.png" class="img-fluid rounded" alt="Product Price Image">
+                    </a>
+                </div>
+
+                <!-- Right clickable image -->
+                <div class="col-6">
+                    <a  href="#Vegetable"  >
+                        <i class="fa-solid fa-carrot"></i>
+                        <h3>Vegetable</h3>
+                    </a>
+                </div>
+            </div>
+            <!-- Second row with two clickable images -->
+            <div class="row">
+                <!-- Left clickable image -->
+                <div class="col-6">
+                    <a href="something">
+                        <img src="/assets/img/product/Price.png" class="img-fluid rounded" alt="Product Price Image">
+                    </a>
+                </div>
+
+                <!-- Right clickable image -->
+                <div class="col-6">
+                    <a href="something">
+                        <i class="fa-solid fa-barcode fa-4x"></i>
+                    </a>
+                </div>
+            </div>
+
+            <!-- Footer with two buttons -->
+            <div class="d-flex justify-content-between mt-3">
+                <a href="something" class="btn btn-success">Product Price</a>
+                <a href="something" class="btn btn-success">Delivery Price</a>
+            </div>
         </div>
+
+
+
+
+ *@
+        <div class="col-lg-3 ">
+            <!-- New Project Section -->
+            <h4 class=" text-center" style="font-size:21px; margin:5px; padding:5px ; font-weight:600">Find Nearby Shop</h4>
+   
+            <div class="row mt-2 " style="margin-top:5px">
+                <div class="col-6">
+                         <div class="Innercard  text-center" >
+     
+                            <form id="update-location-form" method="post" asp-area="Customer" asp-controller="UserProfile" asp-action="UpdateLocation">
+                            
+                                <input type="hidden" id="latitude" name="latitude" />
+                                <input type="hidden" id="longitude" name="longitude" />
+                            <a class="btn" onclick="updateLocation()"><span style="font-size:18px; font-weight:700;" >   <i class="fa-solid fa-location-dot fa-2x"></i>Update Location</span></a>
+                            </form>
+                        </div>
+                        
+                  
+                </div>
+                <div class="col-6">
+                    <a href="something">
+                        <div class="Innercard Innercard-2">
+                            <img src="/assets/img/product/daily price.png" class="img-fluid rounded " style="height:100px;margin-bottom:7px; width:100px" alt="Product Price Image">
+
+                        </div>
+                    </a>
+                </div>
+                <div class="col-6">
+                    <a href="something">
+                        <div class="Innercard Innercard-1">
+                        <img src="/assets/img/product/rider.png" class="img-fluid rounded " style="height:100px;margin-bottom:7px; width:100px" alt="Product Price Image">
+
+                </div>
+                    </a>
+                </div>
+                <div class="col-6">
+                    <a href="something">
+                        <div class="Innercard Innercard-4">
+                            <img src="/assets/img/product/blogs.png" class="img-fluid rounded " style="height:100px;margin-bottom:7px; width:100px" alt="Product Price Image">
+
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+            <!-- Other Services Section -->
+            <h4 class="mt-2">Other Services</h4>
+            <div class="row other-services mt-2">
+                <div class="col-4">
+                    <div class="Innercard text-center">
+                        <i class="fa-regular fa-comments fa-2x"></i>
+                       
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="Innercard text-center">
+                        <i class="fa-solid fa-location-dot fa-5x"></i>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="Innercard text-center">
+                        <i class="fa-solid fa-location-dot fa-5x"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
     </div>
 </div>
 
@@ -154,6 +287,40 @@
         transform: translateY(-1px);
         transition: all 0.2s ease;
     }
+
+    .Innercard {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100px;
+        border-radius: 10px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        margin-bottom: 15px;
+        font-size: 15px;
+        font-weight: bold;
+    }
+
+    .Innercard-1 {
+        background-color: #e3f2fd;
+    }
+
+    .Innercard-2 {
+        background-color: #ffe0b2;
+    }
+
+    .Innercard-3 {
+        background-color: #ffcdd2;
+    }
+
+    .Innercard-4 {
+        background-color: #bbdefb;
+    }
+
+    .other-services .cInnercardard {
+        height: 80px;
+    }
+
 </style>
 <!-- category div End -->
 <!--deals product section area start-->
